# lunasdk

./: .bandit  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  __init__.py  mypy.ini  pylintrc  pyproject.toml  readme.md  setup.py  test.py
VLFaceEngine/image_utils/: image.py
docs/: .buildinfo  examples.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  sdk.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  examples.doctree  index.doctree  install.doctree  sdk.doctree
docs/.doctrees/examples/: sdk_examples.doctree
docs/.doctrees/sdk/: configuration.doctree  estimator_collections.doctree  face_detection.doctree  face_estimations.doctree  faceengine.doctree  (+7 more)
docs/_modules/: index.html
docs/_sources/: install.rst.txt  sdk.rst.txt
docs/_static/: basic.css  documentation_options.js
docs/examples/: sdk_examples.html
docs/sdk/: configuration.html  estimator_collections.html  face_detection.html  face_estimations.html  faceengine.html  geometry.html  high_level_api.html  image_utils.html  matching.html  modules.html  sdk_image.html  warping.html
docs/source/: conf.py  examples.rst  geometry.rst  image.rst  index.rst  modules.rst  sdk.rst
examples/sdk_examples/: ags_estimation.py  basic_attributes_estimation.py  body_attributes_estimation.py  body_descriptor_estimation.py  body_detection.py  body_redetection.py  body_warper.py  build_index.py  credibility_check.py  credibility_estimation.py  dynamic_range_estimation.py  emotion_estimaton.py  emotion_estimator.py  eye_estimaton.py  eyebrow_estimaton.py  face_descriptor_estimation.py  face_detection.py  face_detection_background.py  face_estimators.py  face_natural_light.py  face_redetection.py  face_warper.py  faces_matching.py  fisheye.py  gaze_direction_estimation.py  glasses_estimation.py  head_pose_estimation.py  headwear.py  human_descriptor_estimation.py  human_detection.py  human_redetection.py  human_warper.py  image_color_type.py  image_rotation.py  landmarks_estimation.py  launch_options.py  livenessv1_estimator.py  mask_estimation.py  mask_estimaton.py  mouth_sate_estimation.py  (+7 more)
lunavl/: __init__.py  version.py
lunavl/sdk/: async_task.py  base.py  estimator_collections.py  globals.py  launch_options.py  luna_faces.py
tests/: base.py  config.py  detect_test_class.py  detector_tests.py  estimation_tests.py  image_tests.py  redetect_tests.py  resources.py  schemas.py  test_body_attributes.py  test_body_detector.py  test_body_redetect.py  test_credibility.py  test_credibility_check.py  test_dynamic_range.py  test_estimate_descriptor.py  test_estimate_emotions.py  test_estimate_eyes.py  test_estimate_face_detection_background.py  test_estimate_gaze.py  test_estimation_ags.py  test_estimation_basic_attributes.py  test_eyebrow_expression.py  test_face_redetect.py  test_facedetector.py  test_fisheye.py  test_glasses.py  test_head_pose_estimation.py  test_headwear_estimation.py  test_human_detector.py  test_human_redetect.py  test_humandetector.py  test_image.py  test_image_color_type.py  test_indexes.py  test_launch_options.py  test_livenessv1.py  test_mask.py  test_mouth_state.py  test_natural_face_light.py  (+7 more)
tests/data/: descriptor57.index
vl_luna/image_utils/: geometry.py  image.py
vl_luna/vlfaceengine/: engine.py
(+118 files in other folders)
