[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool]
[tool.poetry]
name = "lunavl"
version = "0.0.21"
description = "Python interface for VisionLabs Luna platform"
authors = ["VisionLabs <m.limonov@visionlabs.ru>"]
repository = "https://github.com/matemax/lunasdk"
[tool.poetry.dependencies]
python = ">=3.6"
numpy = "*"
requests = "^2.22"
Pillow = {version = "7.0.0", markers = "sys_platform == 'win32'"}
pillow-simd = {version = "^v6.0.0.post0", markers = "sys_platform != 'win32'"}

#[tool.poetry.dependencies.FaceEngine]
#git = "https://github.com/VisionLabs/FaceEngine"
#tag = "v.3.9.3.0"

[tool.poetry.dev-dependencies]
sphinx = ">=2.0.0"
pytest = ">=4.4"
pytest-subtests = "*"
sphinx-autodoc-typehints = "*"
pre-commit = "^1.18"
black = {version = "^18.3-alpha.0",allow-prereleases = true}
jsonschema = "^3.2.0"
mypy = "^0.750"
flake8 = "^3.7.9"
bandit = "^1.6.2"


[tool.black]
line-length = 120
target-version = ['py37', 'py36', 'py35']
